--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-   
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +12,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll-horizontal": "^1.6.6",
-    "styled-components": "^5.3.5",
+    "react-sticky-el": "^2.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
